<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="General">

		<CheckBoxPreference
			android:defaultValue="true"
			android:key="@string/verbose_key"
			android:summary="@string/verbose_summary"
			android:title="@string/verbose_title" />

		<EditTextPreference
			defaultValue="@string/rootdir_default"
			android:key="@string/rootdir_key"
			android:summary="@string/rootdir_summary"
			android:title="@string/rootdir_title" />

		<EditTextPreference
			defaultValue="@string/du_default"
			android:key="@string/du_key"
			android:summary="@string/du_summary"
			android:title="@string/du_title" 
			android:lines="8" 
			android:minLines="6" 
			android:gravity="top|left" 
			android:layout_height="wrap_content" 
			android:scrollbars="vertical"
		/>

		<EditTextPreference
			defaultValue="@string/alias_default"
			android:key="@string/alias_key"
			android:summary="@string/alias_summary"
			android:title="@string/alias_title" 
			android:lines="8" 
			android:minLines="6" 
			android:gravity="top|left" 
			android:layout_height="wrap_content" 
			android:scrollbars="vertical"
		/>
	
	</PreferenceCategory>

</PreferenceScreen>
